# zoom-sdk-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml
examples/: simple.rs
examples/simple/: Cargo.toml  build.rs  main.rs  simple-manifest.rc
examples/simple/src/: main.rs
glue-generator/: Cargo.toml
glue-generator/src/: lib.rs  main.rs
src/: auth.rs  error.rs  lib.rs  meeting.rs  meeting_ui.rs
zoom-sdk-windows-sys/: Cargo.toml  README.md  build.rs  glue.cpp  glue.hpp  prelude.hpp  wrapper.hpp
zoom-sdk-windows-sys/src/: lib.rs
