[package]
name = "zoom-sdk"
version = "0.1.0"
authors = ["Tjeu Kayim <15987676+TjeuKayim@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Rust bindings to Zoom Windows SDK"
repository = "https://github.com/TjeuKayim/zoom-sdk-rust"
documentation = "http://docs.rs/zoom-sdk/"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["zoom", "video", "conferencing"]

[workspace]
members = ["zoom-sdk-windows-sys"]

[dependencies]
winapi = { version = "0.3.9", features = ["std"] }

[dependencies.zoom-sdk-windows-sys]
path = "zoom-sdk-windows-sys"

[dev-dependencies]
native-windows-gui = "1.0.7"
native-windows-derive = "1.0.2"
embed-resource = "1.4"
