[package]
name = "zoom-sdk-windows"
version = "0.2.0"
authors = ["Tjeu Kayim <15987676+TjeuKayim@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Rust bindings to Zoom Windows SDK"
repository = "https://github.com/TjeuKayim/zoom-sdk-rust"
documentation = "http://docs.rs/zoom-sdk/"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["zoom", "video", "conferencing"]

[workspace]
members = [
    "zoom-sdk-windows-sys",
    "examples/simple",
]

[dependencies]
winapi = { version = "0.3.9", features = ["std"] }
lazycell = "1.3"

[dependencies.zoom-sdk-windows-sys]
version = "0.2.0"
path = "zoom-sdk-windows-sys"
