[package]
name = "zoom-sdk-windows-sys"
version = "0.1.0"
authors = ["Tjeu Kayim <15987676+TjeuKayim@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "FFI bindings to Zoom Windows SDK"
repository = "https://github.com/TjeuKayim/zoom-sdk-rust"
documentation = "http://docs.rs/zoom-sdk-windows-sys/"
readme = "README.md"
categories = ["external-ffi-bindings"]
keywords = ["zoom", "video", "conferencing"]

[dependencies]

[build-dependencies]
bindgen = "0.56.0"
