[package]
name = "zoom-sdk-example-simple"
version = "0.1.0"
edition = "2018"

[dependencies]
winapi = { version = "0.3.9", features = ["std"] }
native-windows-gui = "1.0.11"
#native-windows-derive = { version = "1.0.3", git = "https://github.com/gabdube/native-windows-gui" }

[dependencies.zoom-sdk]
path = "../.."

[build-dependencies]
embed-resource = "1.4"
